--- a/index.html
+++ b/index.html
@@ -1,41 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Moon-Knight</title>
 
     <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <!--Main CSS File -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    
+    <link href="assets/css/main.css" rel="stylesheet" />
+
     <!-- Related CSS Files -->
-    <link href="related/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="related/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="related/aos/aos.css" rel="stylesheet">
-    <link href="related/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="related/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="related/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="related/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
+    <link href="related/aos/aos.css" rel="stylesheet" />
+    <link href="related/glightbox/css/glightbox.min.css" rel="stylesheet" />
+    <link href="related/swiper/swiper-bundle.min.css" rel="stylesheet" />
   </head>
   <body>
+    <!-- Header  -->
 
-  <!-- Related JS Files -->
-  <script src="related/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="related/aos/aos.js"></script>
-  <script src="related/glightbox/js/glightbox.min.js"></script>
-  <script src="related/purecounter/purecounter_vanilla.js"></script>
-  <script src="related/swiper/swiper-bundle.min.js"></script>
-  <script src="related/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="related/php-email-form/validate.js"></script>
+    <header id="header" class="header d-flex align-items-center">
+      <div
+        class="container-fluid container-xl d-flex align-items-center justify-content-between"
+      >
+        <a href="index.html" class="logo d-flex align-items-center">
+          <h1>Moon-Knight<span>.</span></h1>
+        </a>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <!-- navbar -->
 
-  <!--Main JS File -->
-  <script src="assets/js/main.js"></script>
+        <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+        <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+      </div>
+    </header>
+    <!-- End Header -->
+    <!-- Hero Section-->
+  <section id="hero" class="hero">
+    <div class="container position-relative">
+      <div class="row gy-5" data-aos="fade-in">
+        <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
+          <h2>Heroes Welcome to <span>Moon-Knight.</span></h2>
+          <p>Come and enjoy the most effective web dev learning process. We provide unlimited coding support,
+            daily concept clear sessions, real-world projects, job placement service, and many more. And 66% of our
+            successful students get hired internationally.</p>
+          <div class="d-flex justify-content-center justify-content-lg-start">
+            <a href="#contact" class="btn-get-started">Get Started</a>
+            <a href="https://www.youtube.com/watch?v=XU0FYlY9_E0" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+          </div>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 mb-5">
+          <img src="img/hero.svg" class="img-fluid" alt="" data-aos="zoom-out" data-aos-delay="100">
+        </div>
+      </div>
+    </div>
+    <!-- Hero end-->
 
-</body>
 
+    <!-- Related JS Files -->
+    <script src="related/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="related/aos/aos.js"></script>
+    <script src="related/glightbox/js/glightbox.min.js"></script>
+    <script src="related/purecounter/purecounter_vanilla.js"></script>
+    <script src="related/swiper/swiper-bundle.min.js"></script>
+    <script src="related/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="related/php-email-form/validate.js"></script>
+
+    <!--Main JS File -->
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
