--- a/index.html
+++ b/index.html
@@ -112,6 +112,57 @@
           </div>
         </section>
         <!--End About Us -->
+        <!-- ======= Services Section ======= -->
+    <section id="services" class="services">
+        <div class="container">
+            <div class="section-header">
+                <h2>Services</h2>
+                <p>এই কোর্সের বিশেষত্ব</p>
+              </div>
+  
+          <div class="row gy-4">
+  
+            <div class="col-xl-3 col-md-6 d-flex">
+              <div class="service-item position-relative">
+                <i class="bi bi-activity"></i>
+                <h4><a href="" class="stretched-link">জব প্লেসমেন্ট কোচ                </a></h4>
+                <p>যারা SCIC তে সুযোগ পাবে। এবং সেটা ঠিক মতো শেষ করবে আরো ৪ থেকে ৬ সপ্তাহ লেগে থাকবে। তাদের আরো পার্সোন
+
+                </p>
+              </div>
+            </div><!-- End Service Item -->
+  
+            <div class="col-xl-3 col-md-6 d-flex">
+              <div class="service-item position-relative">
+                <i class="bi bi-bounding-box-circles"></i>
+                <h4><a href="" class="stretched-link">ইন্টারন্যাশনাল জব প্লেসমেন্ট</a></h4>
+                <p>গ্লোবালাইজেশন এর যুগে তোমার জব প্লেসমেন্ট এর টার্গেট কেন শুধু বাংলাদেশ কেন্দ্রিক হবে? বরং দুনিয়ার                </p>
+              </div>
+            </div><!-- End Service Item -->
+  
+            <div class="col-xl-3 col-md-6 d-flex">
+              <div class="service-item position-relative">
+                <i class="bi bi-calendar4-week"></i>
+                <h4><a href="" class="stretched-link">Advance ক্রাশ কোর্স (ACC)</a></h4>
+                <p>প্রোগ্রামিং হিরোতে তুমি জাস্ট একটা কোর্স এ এনরোল করতেছো না। বরং লাইফ লং ওয়েব ডেভেলপমেন্ট শেখার মিশনে
+
+                </p>
+              </div>
+            </div><!-- End Service Item -->
+  
+            <div class="col-xl-3 col-md-6 d-flex">
+              <div class="service-item position-relative">
+                <i class="bi bi-broadcast"></i>
+                <h4><a href="" class="stretched-link">লাইভ কনচেপচুয়াল সেশন</a></h4>
+                <p>শিখতে দুই-একটা কনসেপ্ট প্রথম ধাক্কায় সবার কাছে ক্লিয়ার নাও হতে পারে। এইটা খুবই স্বাভাবিক। এইটা নিয়ে</p>
+              </div>
+            </div><!-- End Service Item -->
+            
+  
+          </div>
+  
+        </div>
+      </section><!-- End Services Section -->
         <!-- Call To Action -->
     <section id="call-to-action" class="call-to-action">
         <div class="container text-center" data-aos="zoom-out">
