--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </section>
         <!--End About Us -->
-        <!-- ======= Services Section ======= -->
+        <!--  Services Section  -->
     <section id="services" class="services">
         <div class="container">
             <div class="section-header">
@@ -187,7 +187,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div class="d-flex align-items-center">
-                      <img src="/img/testimonials/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <img src="img/testimonials-1.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
                         <h3>Saul Goodman</h3>
                         <h4>Ceo &amp; Founder</h4>
@@ -209,7 +209,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div class="d-flex align-items-center">
-                      <img src="/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <img src="img/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
                         <h3>Sara Wilsson</h3>
                         <h4>Designer</h4>
@@ -231,7 +231,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div class="d-flex align-items-center">
-                      <img src="/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <img src="img/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
                         <h3>Jena Karlis</h3>
                         <h4>Store Owner</h4>
@@ -253,7 +253,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div class="d-flex align-items-center">
-                      <img src="/img/testimonials/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <img src="img/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
                         <h3>Matt Brandon</h3>
                         <h4>Freelancer</h4>
@@ -275,7 +275,7 @@
                 <div class="testimonial-wrap">
                   <div class="testimonial-item">
                     <div class="d-flex align-items-center">
-                      <img src="/img/testimonials/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt="">
+                      <img src="img/testimonials-5.jpg" class="testimonial-img flex-shrink-0" alt="">
                       <div>
                         <h3>John Larson</h3>
                         <h4>Entrepreneur</h4>
@@ -313,7 +313,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
               <div class="member">
-                <img src="/img/team/team-1.jpg" class="img-fluid" alt="">
+                <img src="img/team-1.jpg" class="img-fluid" alt="">
                 <h4>Walter White</h4>
                 <span>Web Development</span>
                 <div class="social">
@@ -327,7 +327,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="200">
               <div class="member">
-                <img src="/img/team/team-2.jpg" class="img-fluid" alt="">
+                <img src="img/team-2.jpg" class="img-fluid" alt="">
                 <h4>Sarah Jhinson</h4>
                 <span>Marketing</span>
                 <div class="social">
@@ -341,7 +341,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="300">
               <div class="member">
-                <img src="/img/team/team-3.jpg" class="img-fluid" alt="">
+                <img src="img/team-3.jpg" class="img-fluid" alt="">
                 <h4>William Anderson</h4>
                 <span>Content</span>
                 <div class="social">
@@ -355,7 +355,7 @@
   
             <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="400">
               <div class="member">
-                <img src="/img/team/team-4.jpg" class="img-fluid" alt="">
+                <img src="img/team-4.jpg" class="img-fluid" alt="">
                 <h4>Amanda Jepson</h4>
                 <span>Accountant</span>
                 <div class="social">
